--- a/Semana-04/css/sidebar.css
+++ b/Semana-04/css/sidebar.css
@@ -1,6 +1,7 @@
 aside {
     display: none;
     position: fixed;
+    justify-content: center;
     left: 0px;
     top: 0px;
     width: 303px;
@@ -8,8 +9,17 @@ aside {
     background-color: #B1B2B6;
 }
 
-form.nav {
+form.flex-item {
     text-align: center;
+}
+
+nav div.flex-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 60%;
+    margin: 50px 7% 0% 7%;
+    line-height: 20px;
 }
 
 h4.menu, h4.get-in-touch {
@@ -21,9 +31,8 @@ h4.menu, h4.get-in-touch {
 }
 
 input.search {
-    display: inline-block;
     padding: 10px 20px 10px 20px;
-    margin: 8% 7% 7% 7%;
+    margin: 9% 0% 3% 0%;
     border: 0.60px solid #37386733;
     border-radius: 3px;
     font-size: 16px;
@@ -31,11 +40,10 @@ input.search {
 }
 
 input.log-in-button-style {
-    display: inline-block;
     padding: 12px 25px 12px 25px;
     margin-right: 3px;
     border: none;
-    border-radius: 11.24px;
+    border-radius: 11px;
     background-color: #49A37B;
     text-transform: uppercase;  
     text-decoration: none;
@@ -44,23 +52,12 @@ input.log-in-button-style {
 }
 
 input.sign-in-button-style {
-    display: inline-block;
     padding: 12px 25px 12px 25px;
     border: none;
-    border-radius: 11.24px;
+    border-radius: 11px;
     background-color: #56577C;
     font-size:12px;
     text-transform: uppercase;
     text-decoration: none;
     color: #ffffff;
-}
-
-div.menu {
-    margin: 25% 7% 0% 7%;
-    line-height: 20px;
-}
-
-div.get-in-touch {
-    margin: 60% 7% 0% 7%;
-    line-height: 20px;
 }
